--- a/pages/login.html
+++ b/pages/login.html
@@ -103,7 +103,7 @@
         <div class="form-footer">
           <p>
             <span>Don't have an account yet?</span>
-            <a href="#" class="signup-form-link">Sign Up</a>
+            <a href="signup.html" class="signup-form-link">Sign Up</a>
           </p>
         </div>
       </form>
