--- a/pages/signup.html
+++ b/pages/signup.html
@@ -128,7 +128,7 @@
         <div class="form-footer">
           <p>
             <span>Already have an account?</span>
-            <a href="#signin" class="signin-form-link">Sign in</a>
+            <a href="login.html" class="signin-form-link">Sign in</a>
           </p>
         </div>
       </form>
